Fix nginx listen port. Add concurrency. Update README

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen       80;
+    listen       ${PORT};
     server_name  marunouchi-lunch.hamchance.com;
     charset      utf-8;
     root /usr/share/nginx/public;
