Fix port to 8080

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen       ${PORT};
+    listen       8080;
     server_name  marunouchi-lunch.hamchance.com;
     charset      utf-8;
     root /usr/share/nginx/public;
