--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "yarn eslint src/**/*"
+    "lint": "yarn lint:es && yarn lint:tsc && yarn lint:style && yarn lint:prettier",
+    "lint:es": "yarn eslint src/**/*",
+    "lint:style": "stylelint './src/**/*.tsx'",
+    "lint:prettier": "prettier --check './src/**/*.{ts,tsx}'",
+    "lint:tsc": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": "react-app"
